# mumax-view

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  arrowmodel.cpp  arrowmodel.hpp  field.cpp  field.hpp  fieldrenderer.hpp  index.html  main.cpp  shaders.hpp
src/: application.cpp  application.hpp  arrow.cpp  arrow.hpp  camera.cpp  camera.hpp  cuboid.cpp  cuboid.hpp  field.cpp  field.hpp  fieldboxrenderer.cpp  fieldboxrenderer.hpp  fieldcollection.cpp  fieldcollection.hpp  fieldrenderer.cpp  fieldrenderer.hpp  glyph.cpp  glyph.hpp  main.cpp  ovf.cpp  ovf.hpp  scene.cpp  scene.hpp  shaderprogram.hpp  shaders.hpp  timeintervaltrigger.cpp  timeintervaltrigger.hpp  viewer.cpp  viewer.hpp  vimag.cpp  vimag.hpp
